tests/invalid/exported_object_private_ctor.wio
@Export
object HiddenFactory {
    public value: i32;

    OnConstruct(seed: i32) {
        self.value = seed;
    }
}
